# jet_analysis

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  FindPythia8.cmake  FindStarPico.cmake  SysCheck.cmake  Utils.cmake
cmake/Modules/: FindPythia8.cmake  FindTStarJetPico.cmake  Findgflags.cmake  Findglog.cmake
docs/: data_qa.md  dijet_imbalance.md  dijet_worker.md  efficiency.md  monte_carlo.md  submit.md  test.md  util.md
docs/pieces/: data_qa.md
jet_analysis/: CMakeLists.txt
jet_analysis/centrality/: CMakeLists.txt  centrality_run14.cc  centrality_run14.hh
jet_analysis/data_qa/: CMakeLists.txt  check_refmult.cc  compare_auau.cc  compare_auau_print.cc  compare_y14_productions.cc  compare_y14_y7_pt.cc  compare_y7_y11_pt.cc  compare_y7_y4_pt.cc  comprehensive_data_quality.cc  generate_pt_spectra.cc  generate_rho.cc  generate_runid_list.cc  generate_y11_efficiency.cc  generate_y11_pt_spectrum.cc  generate_y14_efficiency.cc  generate_y14_y7_compare.cc  global_primary.cc  nglobal_cut_pt_spectra.cc  p16id_p17id_compare.cc  print_compare_pp.cc  print_data_quality.cc  run14_vertex_comparison.cc  track_quality_quick.cc
jet_analysis/dijet_imbalance/: CMakeLists.txt  basic_dijet_imbalance.cc  compare_worker_output.cc  differential_aj.cc  differential_aj_auau.cc  differential_aj_pp.cc  differential_aj_pp_y7.cc  print_auau_pp_results.cc  print_results_with_systematics.cc  print_results_with_systematics_qm.cc
jet_analysis/dijet_worker/: CMakeLists.txt  dijet_definition.hh  dijet_matrix.cc  dijet_matrix.hh  dijet_worker.cc  dijet_worker.hh  jet_def.cc  jet_def.hh  match_def.hh  off_axis_worker.cc  off_axis_worker.hh
jet_analysis/dijet_worker/dijet_matrix/: dijet_definition.cc  dijet_definition.hh  dijet_matrix.cc  dijet_matrix.hh  jet_def.cc  jet_def.hh  match_def.cc  match_def.hh
jet_analysis/efficiency/: CMakeLists.txt  run11_eff.cc  run11_eff.hh  run14_eff.cc  run14_eff.hh  run4_eff.cc  run4_eff.hh  run7_eff.cc  run7_eff.hh  run7_eff_old.cc  run7_eff_old.h
jet_analysis/embedding_qa/: CMakeLists.txt  compare_pt.cc  compare_pt_p18if.cc  compare_y7_pt_spectra.cc  make_eff_curves.cc  make_eff_curves_scaled.cc  make_y7_pt_spectra.cc
jet_analysis/monte_carlo/: CMakeLists.txt  print_pythia_eff_results.cc  pythia_aj_efficiency.cc
jet_analysis/refmult_correction/: CMakeLists.txt  lumi_vz_correction.cc
jet_analysis/submit/: CMakeLists.txt  create_runid_list.py  pbs_submit_auau_compare.py  pbs_submit_basic_dijet_imbalance.py  pbs_submit_check_refmult.py  pbs_submit_comprehensive_dq.py  pbs_submit_dijet_imbalance.py  pbs_submit_dijet_imbalance_auau.py  pbs_submit_dijet_imbalance_pp.py  pbs_submit_dijet_imbalance_pp_y7.py  pbs_submit_nglobal_cut_pt_spectra.py  pbs_submit_pt_spectra.py  y11_efficiency.root  y12_runids.root  y14_bad_run.txt  y14_bad_tower.txt  y14_effic.root  y14_effic_dca1.root  y14_effic_dca2.root  y14_effic_dca3.root  y14_mb_file_list.txt  y14_nglob_nprim.root  y14_runids.root  y14_y6_bad_tower.txt  y6_bad_tower.txt  y6_runids.root  y7_runids.root  y7_y6_bad_tower.txt
jet_analysis/submit/pp_list/grid/: pp10_0.list  pp10_1.list  pp11_0.list  pp11_1.list  pp1_0.list  pp1_1.list  pp2_0.list  pp2_1.list  pp3_0.list  pp3_1.list  pp4_0.list  pp4_1.list  pp5_0.list  pp5_1.list  pp6_0.list  pp6_1.list  pp7_0.list  pp7_1.list  pp8_0.list  pp8_1.list  pp9_0.list  pp9_1.list  pp_0.list  pp_1.list  pp_10.list  pp_11.list  pp_12.list  pp_13.list  pp_14.list  pp_15.list  pp_16.list  pp_17.list  pp_18.list  pp_19.list  pp_2.list  pp_20.list  pp_21.list  pp_22.list  pp_23.list  pp_24.list  (+74 more)
jet_analysis/test/: CMakeLists.txt  arg_helper_test.cc  basic_fastjet_test.cc  basic_root_test.cc  basic_ts_test.cc  csv_test.csv  dijet_definition_test.cc  dijet_key_test.cc  dijet_matrix_test.cc  dijet_worker_test.cc  jet_def_test.cc  match_def_test.cc  pt_distribution_test.cc  reader_util_test.cc  reader_util_test.in.cc  reader_util_test.in.txt  reader_util_test.txt  run4_eff_test.cc  selector_compare_test.cc  trigger_lookup_test.cc
jet_analysis/util/: CMakeLists.txt  arg_helper.hh  common.hh  dijet_key.hh  histogram_routines.hh  make_unique.h  pt_distribution.hh  reader_util.hh  root_print_routines.hh  selector_compare.hh  string_util.hh  trigger_lookup.hh  vector_conversion.hh
